logs/edna2.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/Unidecode-1.0.22.dist-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/beets'...
Listing './lib/python3.5/site-packages/beets/autotag'...
Listing './lib/python3.5/site-packages/beets/dbcore'...
Listing './lib/python3.5/site-packages/beets/ui'...
Listing './lib/python3.5/site-packages/beets/util'...
Listing './lib/python3.5/site-packages/beets-1.4.6.egg-info'...
Listing './lib/python3.5/site-packages/beetsplug'...
Listing './lib/python3.5/site-packages/beetsplug/bpd'...
Listing './lib/python3.5/site-packages/beetsplug/lastgenre'...
Listing './lib/python3.5/site-packages/beetsplug/metasync'...
Listing './lib/python3.5/site-packages/beetsplug/static'...
Listing './lib/python3.5/site-packages/beetsplug/static/css'...
Listing './lib/python3.5/site-packages/beetsplug/static/ednoise'...
Listing './lib/python3.5/site-packages/beetsplug/static/ednoise/.git'...
Listing './lib/python3.5/site-packages/beetsplug/static/ednoise/.git/hooks'...
Listing './lib/python3.5/site-packages/beetsplug/static/ednoise/.git/info'...
Listing './lib/python3.5/site-packages/beetsplug/static/ednoise/.git/logs'...
Listing './lib/python3.5/site-packages/beetsplug/static/ednoise/.git/logs/refs'...
Listing './lib/python3.5/site-packages/beetsplug/static/ednoise/.git/logs/refs/heads'...
Listing './lib/python3.5/site-packages/beetsplug/static/ednoise/.git/logs/refs/remotes'...
Listing './lib/python3.5/site-packages/beetsplug/static/ednoise/.git/objects'...
Listing './lib/python3.5/site-packages/beetsplug/static/ednoise/.git/objects/00'...
Listing './lib/python3.5/site-packages/beetsplug/static/ednoise/.git/objects/08'...
Listing './lib/python3.5/site-packages/beetsplug/static/ednoise/.git/objects/40'...
Listing './lib/python3.5/site-packages/beetsplug/static/ednoise/.git/objects/46'...
Listing './lib/python3.5/site-packages/beetsplug/static/ednoise/.git/objects/4c'...
Listing './lib/python3.5/site-packages/beetsplug/static/ednoise/.git/objects/53'...
Listing './lib/python3.5/site-packages/beetsplug/static/ednoise/.git/objects/59'...
Listing './lib/python3.5/site-packages/beetsplug/static/ednoise/.git/objects/5d'...
Listing './lib/python3.5/site-packages/beetsplug/static/ednoise/.git/objects/67'...
Listing './lib/python3.5/site-packages/beetsplug/static/ednoise/.git/objects/94'...
Listing './lib/python3.5/site-packages/beetsplug/static/ednoise/.git/objects/9c'...
Listing './lib/python3.5/site-packages/beetsplug/static/ednoise/.git/objects/a4'...
Listing './lib/python3.5/site-packages/beetsplug/static/ednoise/.git/objects/c0'...
Listing './lib/python3.5/site-packages/beetsplug/static/ednoise/.git/objects/d8'...
Listing './lib/python3.5/site-packages/beetsplug/static/ednoise/.git/objects/pack'...
Listing './lib/python3.5/site-packages/beetsplug/static/ednoise/.git/refs'...
Listing './lib/python3.5/site-packages/beetsplug/static/ednoise/.git/refs/heads'...
Listing './lib/python3.5/site-packages/beetsplug/static/ednoise/.git/refs/remotes'...
Listing './lib/python3.5/site-packages/beetsplug/static/ednoise/.git/refs/remotes/origin'...
Listing './lib/python3.5/site-packages/beetsplug/static/ednoise/_mp3'...
Listing './lib/python3.5/site-packages/beetsplug/static/ednoise/css'...
Listing './lib/python3.5/site-packages/beetsplug/static/ednoise/imgs'...
Listing './lib/python3.5/site-packages/beetsplug/static/ednoise/js'...
Listing './lib/python3.5/site-packages/beetsplug/static/ednoise/js/swf'...
Listing './lib/python3.5/site-packages/beetsplug/static/ednoise/swf'...
Listing './lib/python3.5/site-packages/beetsplug/static/img'...
Listing './lib/python3.5/site-packages/beetsplug/static/js'...
Listing './lib/python3.5/site-packages/beetsplug/templates'...
Listing './lib/python3.5/site-packages/beetsplug/web'...
Listing './lib/python3.5/site-packages/beetsplug/web/static'...
Listing './lib/python3.5/site-packages/beetsplug/web/templates'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/coverage'...
Listing './lib/python3.5/site-packages/coverage/fullcoverage'...
Listing './lib/python3.5/site-packages/coverage/htmlfiles'...
Listing './lib/python3.5/site-packages/coverage-4.4.2.dist-info'...
Listing './lib/python3.5/site-packages/edna2-0.7.1.egg-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jellyfish'...
Listing './lib/python3.5/site-packages/jellyfish-0.5.6.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/munkres-1.0.12.dist-info'...
Listing './lib/python3.5/site-packages/musicbrainzngs'...
Listing './lib/python3.5/site-packages/musicbrainzngs-0.6.egg-info'...
Listing './lib/python3.5/site-packages/mutagen'...
Listing './lib/python3.5/site-packages/mutagen/_senf'...
Listing './lib/python3.5/site-packages/mutagen/_tools'...
Listing './lib/python3.5/site-packages/mutagen/asf'...
Listing './lib/python3.5/site-packages/mutagen/id3'...
Listing './lib/python3.5/site-packages/mutagen/mp3'...
Listing './lib/python3.5/site-packages/mutagen/mp4'...
Listing './lib/python3.5/site-packages/mutagen-1.39.egg-info'...
Listing './lib/python3.5/site-packages/nose'...
Listing './lib/python3.5/site-packages/nose/ext'...
Listing './lib/python3.5/site-packages/nose/plugins'...
Listing './lib/python3.5/site-packages/nose/sphinx'...
Listing './lib/python3.5/site-packages/nose/tools'...
Listing './lib/python3.5/site-packages/nose-1.3.7.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/unidecode'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/man'...
Listing './share/man/man1'...
Listing './share/python-wheels'...
